# json-osi

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  install.sh  models.rs  run.sh
dev-test-runner/: Cargo.toml
dev-test-runner/src/: main.rs
examples/: complex_singletons.json  samples.json  samples.rs
src/: cli.rs  codegen.rs  inference.rs  ir.rs  jq_exec.rs  lower.rs  main.rs  norm_ir.rs  path_de.rs
src/inference/: arr.rs  num.rs  obj.rs  str.rs
