[package]
name = "json-osi"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
indexmap = { version = "2.10.0", features = ['serde']}
ordered-float = "4"
regex = "1"
once_cell = "1"
clap = { version = "4.5.37", features = ["derive"] }
glob = "0.3.3"
thiserror = "2.0.16"
anyhow = "1.0.100"
jaq-core = "2.2"
jaq-std  = "2.1"
jaq-json = { version = "1.1", features = ["serde_json"] }

