[package]
name = "json-osi"
version = "0.1.0"
edition = "2024"

# [lib]
# name = "json_osi"        # code uses `json_osi::...`
# path = "src/lib.rs"

[[bin]]
name = "json-osi"        # your CLI
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
serde_path_to_error = "0.1.20"
indexmap = { version = "2.10.0", features = ['serde']}
ordered-float = "4"
regex = "1"
once_cell = "1"
clap = { version = "4.5.37", features = ["derive"] }
glob = "0.3.3"
thiserror = "2.0.16"
anyhow = "1.0.100"
jaq-core = "2.2"
jaq-std  = "2.1"
jaq-json = { version = "1.1", features = ["serde_json"] }
rayon = "1.10"
grex = "1.4.5"
colored = "3.0.0"
chrono = "0.4.42"

[workspace]
members = [".", "dev-test-runner"]

[[example]]
name = "samples"
path = "examples/samples.rs"

[[example]]
name = "complex_singletons"
path = "examples/complex_singletons.rs"
